style: gap fix to pinwrap/playlistwprap classes

--- a/scss/layout/_sideNavbar.scss
+++ b/scss/layout/_sideNavbar.scss
@@ -59,6 +59,7 @@
       .playlistwrap {
         display: flex;
         align-items: center;
+        gap: 1rem;
       }
 
       span {
